<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="8dp">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/swiper_file_type_filter_hint"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/category_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:text="@string/swiper_file_type_category_images" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_images_subtitle"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/swiper_file_type_category_images_subtitle"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/category_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:text="@string/swiper_file_type_category_videos" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_videos_subtitle"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/swiper_file_type_category_videos_subtitle"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/category_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:text="@string/swiper_file_type_category_audio" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_audio_subtitle"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/swiper_file_type_category_audio_subtitle"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/category_documents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:text="@string/swiper_file_type_category_documents" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_documents_subtitle"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/swiper_file_type_category_documents_subtitle"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/category_archives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:text="@string/swiper_file_type_category_archives" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_archives_subtitle"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/swiper_file_type_category_archives_subtitle"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custom_extensions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custom_extensions_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="apk,apkm,apks,hdl,nik"
            android:inputType="text"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
